[project]
name = "general-bot"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore==3.2.1",
    "aiogram==3.26.0",
    "botocore==1.42.61",
    "loguru==0.7.3",
    "pydantic-settings==2.13.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel==7.2.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]
