[project]
name = "timeline-hub"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "aiobotocore==3.2.1",
    "aiogram==3.26.0",
    "botocore==1.42.61",
    "loguru==0.7.3",
    "pydantic-settings==2.13.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel==7.2.0",
    "pre-commit==4.5.1",
    "pyright==1.1.408",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.7",
]

[tool.ruff]
line-length = 120
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "TID",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "single"
